--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Find Zephyr. This also loads Zephyr's build system.
-cmake_minimum_required(VERSION 3.13.1)
-find_package(Zephyr)
+cmake_minimum_required(VERSION 3.20.1)
+find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 project(umdom_bluepill)
 # Add your source file to the "app" target. This must come after
 # find_package(Zephyr) which defines the target.
