--- a/src/driver/bh1750/CMakeLists.txt
+++ b/src/driver/bh1750/CMakeLists.txt
@@ -1,5 +1,4 @@
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library()
+zephyr_sources_ifdef(CONFIG_BH1750 bh1750.c)
 
-zephyr_library_sources_ifdef(CONFIG_BH1750 bh1750.c)
