--- a/src/driver/am2320/CMakeLists.txt
+++ b/src/driver/am2320/CMakeLists.txt
@@ -1,5 +1,3 @@
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_library()
-
-zephyr_library_sources_ifdef(CONFIG_AM2320 am2320.c)
+zephyr_sources_ifdef(CONFIG_AM2320 am2320.c)
