--- a/prj.conf
+++ b/prj.conf
@@ -15,6 +15,8 @@ CONFIG_SHELL_CMD_BUFF_SIZE=128
 CONFIG_SHELL_STACK_SIZE=1024
 CONFIG_FLASH_MAP_SHELL=y
 CONFIG_ADC_SHELL=n
+CONFIG_CAN_SHELL=n
+CONFIG_SHELL_BACKEND_CANOPEN=y
 
 #SETTINGS STORAGE NVS
 CONFIG_SETTINGS=y
@@ -31,10 +33,11 @@ CONFIG_CAN_MAX_FILTER=13
 CONFIG_I2C=y
 
 CONFIG_CANOPEN=y
-CONFIG_CANOPEN_SYNC_THREAD=y
-CONFIG_CANOPEN_STORAGE=y
-CONFIG_CANOPEN_LEDS=y
-CONFIG_CANOPEN_LEDS_BICOLOR=y
+CONFIG_CANOPENNODE=y
+CONFIG_CANOPENNODE_SYNC_THREAD=y
+CONFIG_CANOPENNODE_STORAGE=y
+CONFIG_CANOPENNODE_LEDS=y
+CONFIG_CANOPENNODE_LEDS_BICOLOR=y
 
 # sensors
 CONFIG_SENSOR=y
@@ -59,8 +62,9 @@ CONFIG_USE_DT_CODE_PARTITION=y
 #Zepthyr Kernel
 CONFIG_NUM_COOP_PRIORITIES=8
 CONFIG_NUM_PREEMPT_PRIORITIES=7
-CONFIG_ISR_STACK_SIZE=1024
+CONFIG_ISR_STACK_SIZE=512
 CONFIG_IDLE_STACK_SIZE=128
+CONFIG_MAIN_STACK_SIZE=512
 # CONFIG_KERNEL_MEM_POOL=y
 # CONFIG_HEAP_MEM_POOL_SIZE=128
 
